--- a/4.3/tools/grabber/UnitMainWindow.lfm
+++ b/4.3/tools/grabber/UnitMainWindow.lfm
@@ -1,23 +1,24 @@
 object MainWindow: TMainWindow
   Left = 241
-  Height = 300
+  Height = 356
   Top = 150
-  Width = 400
+  Width = 437
   ActiveControl = DatafileContent
   Caption = 'Grabber [<unnamed>]'
-  ClientHeight = 275
-  ClientWidth = 400
+  ClientHeight = 328
+  ClientWidth = 437
   Menu = MainMenu
   OnCreate = FormCreate
   OnDestroy = FormDestroy
+  ParentFont = False
   Position = poDefault
-  LCLVersion = '0.9.26.2'
+  LCLVersion = '0.9.26'
   object DatafileContent: TTreeView
-    Height = 281
-    Width = 400
+    Height = 304
+    Width = 224
     Align = alClient
     AutoExpand = True
-    DefaultItemHeight = 22
+    DefaultItemHeight = 18
     ExpandSignType = tvestArrow
     Font.Height = -16
     Font.Name = 'Monospace'
@@ -25,6 +26,7 @@ object MainWindow: TMainWindow
     Images = DatafileImageList
     ParentFont = False
     TabOrder = 0
+    OnSelectionChanged = DatafileContentSelectionChanged
     Options = [tvoAutoExpand, tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
     Items.Data = {
       F9FFFFFF020001000000000000000000000000000000FFFFFFFF000000000000
@@ -32,14 +34,41 @@ object MainWindow: TMainWindow
     }
   end
   object StatusBar: TStatusBar
-    Height = 19
-    Top = 281
-    Width = 400
+    Height = 24
+    Top = 304
+    Width = 437
     Panels = <    
       item
         Width = 50
       end>
     SimplePanel = False
+  end
+  object ObjectPanel: TPanel
+    Left = 224
+    Height = 304
+    Width = 213
+    Align = alRight
+    ClientHeight = 304
+    ClientWidth = 213
+    TabOrder = 2
+    object NameEdit: TLabeledEdit
+      Left = 8
+      Height = 23
+      Top = 24
+      Width = 192
+      EditLabel.AnchorSideLeft.Control = NameEdit
+      EditLabel.AnchorSideBottom.Control = NameEdit
+      EditLabel.Left = 8
+      EditLabel.Height = 17
+      EditLabel.Top = 4
+      EditLabel.Width = 49
+      EditLabel.Caption = 'Name:'
+      EditLabel.ParentColor = False
+      Enabled = False
+      ParentColor = False
+      TabOrder = 0
+      Text = '<none>'
+    end
   end
   object MainMenu: TMainMenu
     object MenuItem_File: TMenuItem
