--- a/4.4/examples/lazarus/UnitMainForm.lfm
+++ b/4.4/examples/lazarus/UnitMainForm.lfm
@@ -1,37 +1,53 @@
-object MainForm: TMainForm
-  Left = 327
-  Height = 300
-  Top = 213
-  Width = 400
-  Caption = 'Allegro.pas example'
-  ClientHeight = 275
-  ClientWidth = 400
-  Menu = MainMenu
-  OnCreate = FormCreate
-  OnDestroy = FormDestroy
-  LCLVersion = '0.9.26.2'
+object Form1: TForm1
+  Left = 390
+  Height = 453
+  Top = 158
+  Width = 624
+  Caption = 'The Allegro''s Lazarus example'
+  ClientHeight = 428
+  ClientWidth = 624
+  Menu = MainMenu1
+  OnClose = FormClose
+  Position = poDefault
+  LCLVersion = '0.9.28.2'
   object PaintBox: TPaintBox
-    Height = 275
-    Width = 400
+    Left = 0
+    Height = 428
+    Top = 0
+    Width = 624
     Align = alClient
+    OnPaint = PaintBoxPaint
   end
-  object MainMenu: TMainMenu
-    object MenuItem_Bitmap: TMenuItem
-      Caption = 'Bitmap'
-      object MenuItem_Load: TMenuItem
-        Caption = 'Load...'
-        OnClick = MenuItem_LoadClick
-      end
-      object MenuItem_Create: TMenuItem
-        Caption = 'Create'
-      end
-    end
-    object MenuItem_About: TMenuItem
-      Caption = 'About...'
-    end
+  object OpenBitmapDialog: TOpenDialog
+    Filter = 'Bitmap (*.bmp;*.lbm;*.pcx;*.tga)|*.bmp;*.lbm;*.pcx;*.tga|Windows and OS/2 bitmap (*.bmp)|*.bmp|LBM (*.lbm)|*.lbm|ZSoft bitmap (*.pcx)|*.pcx|TARGA file format (*.tga)|*.tga'
+    left = 56
+    top = 80
   end
-  object OpenDialog: TOpenDialog
-    Filter = 'Images|*.bmp;*.pcx;*.lbm;*.tga'
+  object MainMenu1: TMainMenu
     left = 32
+    top = 19
+    object MenuItem1: TMenuItem
+      Caption = '&File'
+      object MenuItem3: TMenuItem
+        Caption = 'Load &picture...'
+        OnClick = MenuItem3Click
+      end
+      object MenuItem4: TMenuItem
+        Caption = 'Load &sound...'
+        OnClick = MenuItem4Click
+      end
+    end
+    object MenuItem2: TMenuItem
+      Caption = '?'
+      object MenuItem5: TMenuItem
+        Caption = 'About...'
+        OnClick = MenuItem5Click
+      end
+    end
+  end
+  object OpenSoundDialog: TOpenDialog
+    Filter = 'Sound files (*.voc, *.wav)|*.voc;*.wav|Creative Labs (*.voc)|*.voc|Windows wave (*.wav)|*.wav'
+    left = 192
+    top = 80
   end
 end
