[4.4] More preparation for 4.4.5:   * More documentation updates.   * Small change on Lazarus example.

--- a/TRUNK/examples/lazarus/UnitMainForm.lfm
+++ b/TRUNK/examples/lazarus/UnitMainForm.lfm
@@ -9,8 +9,8 @@ object Form1: TForm1
   Menu = MainMenu1
   OnClose = FormClose
   OnCreate = FormCreate
-  Position = poDefault
-  LCLVersion = '1.2.0.3'
+  Position = poScreenCenter
+  LCLVersion = '1.4.2.0'
   object PaintBox: TPaintBox
     Left = 0
     Height = 281
@@ -42,4 +42,4 @@ object Form1: TForm1
       end
     end
   end
-end
+end
